--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,3 +7,4 @@ Author: Sebastian Kranz
 Maintainer: Sebastian Kranz <sebastian.kranz@uni-ulm.de>
 Description: Collects meta data from economic articles with data appendices for reproducible research
 License: GPL >= 2.0
+Depends: dplyr
