--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,4 +7,5 @@ Author: Sebastian Kranz
 Maintainer: Sebastian Kranz <sebastian.kranz@uni-ulm.de>
 Description: Collects meta data from economic articles with data appendices for reproducible research
 License: GPL >= 2.0
-Depends: dplyr, restorepoint, dplyrExtras, stringtools, sktools, yaml, lubridate, tidyr
+Depends: dplyr, restorepoint, dplyrExtras, stringtools,  yaml,
+  lubridate, tidyr, dbmisc, rvest, sktools, textreadr
