--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,4 @@ Maintainer: Sebastian Kranz <sebastian.kranz@uni-ulm.de>
 Description: Collects meta data from economic articles with data appendices for reproducible research
 License: GPL >= 2.0
 Depends: dplyr, restorepoint, dplyrExtras, stringtools,  yaml,
-  lubridate, tidyr, dbmisc, rvest, sktools, textreadr
+  lubridate, tidyr, dbmisc, rvest, sktools
