--- a/inst/base/journal_info.yaml
+++ b/inst/base/journal_info.yaml
@@ -182,7 +182,7 @@ restud:
 
 jeea:
   short: jeea
-  name: Review of Economic Studies
+  name: Journal of the European Economic Association
   first_vol: 10
   first_year: 2012
   max_issues: 6
